log
Mon 25 Mar 2024 08:48:03 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   33 |   lista->head = NULL;
      |        ^~
list.c:32:25: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *lista = (List *)malloc(sizeof(lista));
      |                         ^~~~~~~~~~~~~~~~~~~~~
list.c:34:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   34 |   lista->tail = NULL;
      |        ^~
list.c:32:25: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *lista = (List *)malloc(sizeof(lista));
      |                         ^~~~~~~~~~~~~~~~~~~~~
list.c:35:8: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   35 |   lista->current = NULL;
      |        ^~
list.c:32:25: note: referencing an object of size 8 allocated by ‘malloc’
   32 |   List *lista = (List *)malloc(sizeof(lista));
      |                         ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
380d25d
Mon 25 Mar 2024 08:49:33 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
12624a7
Mon 25 Mar 2024 08:52:09 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9a2fc3e
Mon 25 Mar 2024 08:53:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
30cca54
Mon 25 Mar 2024 08:54:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f3b82cc
Mon 25 Mar 2024 08:58:16 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
92b1fd1
Mon 25 Mar 2024 09:05:59 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
952aa01
Mon 25 Mar 2024 09:06:19 PM UTC: 
 tests:  0|0
91c77db
Mon 25 Mar 2024 09:09:49 PM UTC: 
 list.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
 tests:  2|5
total_score: 15/70
436a812
Mon 25 Mar 2024 09:10:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8f3beeb
Mon 25 Mar 2024 09:11:45 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
5aa4568
Mon 25 Mar 2024 09:15:11 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
73bc8b4
Mon 25 Mar 2024 09:16:34 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
3d0fb35
Mon 25 Mar 2024 09:17:17 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|4
total_score: 25/70
1835336
Mon 25 Mar 2024 09:19:28 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
b94c6a4
Mon 25 Mar 2024 09:21:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
25b9efe
Mon 25 Mar 2024 09:29:12 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
23bee33
Mon 25 Mar 2024 09:30:11 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
02af8b4
